objc2/tests/ui/msg_send_no_return_type.stderr
error[E0282]: type annotations needed
 --> $DIR/msg_send_no_return_type.rs:6:20
  |
6 |         let _obj = msg_send![cls, new];
  |             ----   ^^^^^^^^^^^^^^^^^^^ cannot infer type
  |             |
  |             consider giving `_obj` a type
  |
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
